metadata-classic/objects/InternalArticle__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>These KB articles contain best practices for serving customers and pros.</description>
    <fields>
        <fullName>KB_Content__c</fullName>
        <label>KB Content</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>KnowledgePointofContact__c</fullName>
        <description>Open text area of the content manager to add in the person&apos;s name and department of who the subject matter expert is for the article text.</description>
        <inlineHelpText>Please enter the name and department of the person who you are working with to compile the knowledge article.</inlineHelpText>
        <label>Knowledge Point of Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCContent__c</fullName>
        <description>Rich text area field to store information pertinent to MC&apos;s (mastery certified agents) only.</description>
        <label>MC Content</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>NewContentSupportRequestLink__c</fullName>
        <formula>HYPERLINK(&quot;/a05/e?00N3100000GNNoG=&quot;&amp;ArticleNumber&amp;&quot;&amp;Name=Content Request for &quot;&amp;ArticleNumber&amp;&quot;&amp;00N3100000G42tT=&quot;&amp;Title 
, &quot;New Content Support Request&quot;,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Content Support Request Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedContent__c</fullName>
        <description>Custom rich text field to house the email templates and/or macros that could be used to respond to the customer/pro.</description>
        <label>Related Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Internal Article</label>
    <pluralLabel>Internal Articles</pluralLabel>
</CustomObject>